--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,11 @@ project(ff_leixiaohua)
 
 set(CMAKE_CXX_STANDARD 11)
 
-include_directories(/usr/local/Cellar/sdl2/2.0.14_1/include/)
-link_directories(/usr/local/Cellar/sdl2/2.0.14_1/lib)
+include_directories(/usr/local/Cellar/sdl2/2.0.18/include/)
+link_directories(/usr/local/Cellar/sdl2/2.0.18/lib)
 
-include_directories(/usr/local/Cellar/ffmpeg/4.4_2/include)
-link_directories(/usr/local/Cellar/ffmpeg/4.4_2/lib)
+include_directories(/usr/local/Cellar/ffmpeg/4.4.1_3/include)
+link_directories(/usr/local/Cellar/ffmpeg/4.4.1_3/lib)
 
 add_subdirectory(simplest_ffmpeg_player)
 add_subdirectory(simplest_ffmpeg_player_su)
@@ -18,3 +18,4 @@ add_subdirectory(simplest_ffmpeg_decoder)
 add_subdirectory(event_sdl2)
 add_subdirectory(simplest_video_play_sdl2_basic)
 add_subdirectory(simplest_mediadata_test)
+add_subdirectory(sei)
